refactor(接口测试): 发送通知方法优化
Signed-off-by: fit2-zhao <yong.zhao@fit2cloud.com>